--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -1,7 +1,7 @@
 <div class="sideLinks">
             <h2>Plays</h2>
                 <ul>
-                    <li><a href="#">Overview</a></li>
+                    <li><a href="#">Overview (Coming Soon)</a></li>
                     <li><a href="{{ site.baseurl }}/definitions">Definitions</a></li>
                     <li><a href="{{ site.baseurl }}/product-manager-role">Role of the Product Manager</a></li>
                     <li><a href="{{ site.baseurl }}/product-owner-role">Role of the Product Owner</a></li>
@@ -13,32 +13,32 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                         <ul><ul><ul>
-                            <li><a href="#">Interview Script Generation</a></li>
+                            <li><a href="#">Interview Script Generation (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/user-interviews">Performing User Interviews</a></li>
                             <li><a href="{{ site.baseurl }}/interview-synthesis">User Interview Synthesis</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                         <ul><ul><ul>
-                            <li><a href="#">Technical Discovery &amp; Analysis</a></li>
-                            <li><a href="#">Defining &amp; Prioritizing Problems</a></li>
+                            <li><a href="#">Technical Discovery &amp; Analysis (Coming Soon)</a></li>
+                            <li><a href="#">Defining &amp; Prioritizing Problems (Coming Soon)</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/defining-the-problem">Solutioning - Defining the Problem</a></li>
                             <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
-                            <li><a href="#">Prototype Interviews</a></li>
-                            <li><a href="#">UI Design Development</a></li>
+                            <li><a href="#">Prototype Interviews (Coming Soon)</a></li>
+                            <li><a href="#">UI Design Development (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/prioritization">Prioritization</a></li>
-                            <li><a href="#">Feature Sizing</a></li>
+                            <li><a href="#">Feature Sizing (Coming Soon)</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/generating-backlog">Generating a Backlog</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/writing-user-stories">Writing User Stories</a></li>
-                            <li><a href="#">Writing Acceptance Criteria</a></li>
+                            <li><a href="#">Writing Acceptance Criteria (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
                             <li><a href="{{ site.baseurl }}/definition-of-done">Defining Definition of Done</a></li>
                         </ul></ul></ul>
@@ -47,16 +47,16 @@
                             <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                             <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
-                            <li><a href="#">Integrating with Systems &amp; Services</a></li>
+                            <li><a href="#">Integrating with Systems &amp; Services (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
-                            <li><a href="#">Setting Up a Product Board</a></li>
-                            <li><a href="#">UI Component Library Development</a></li>
-                            <li><a href="#">508 Accessibility Considerations</a></li>
+                            <li><a href="#">Setting Up a Product Board (Coming Soon)</a></li>
+                            <li><a href="#">UI Component Library Development (Coming Soon)</a></li>
+                            <li><a href="#">508 Accessibility Considerations (Coming Soon)</a></li>
                     </ul></ul></ul>
-                    <li><a href="#">All the Meetings You Need</a></li>
+                    <li><a href="#">All the Meetings You Need (Coming Soon)</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/daily-standup">Daily Standup</a></li>
-                            <li><a href="#">Iteration Planning</a></li>
+                            <li><a href="#">Iteration Planning (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/retrospective">Retrospective</a></li>
                             <li><a href="{{ site.baseurl }}/check-in">Client Check In</a></li>
                         </ul></ul></ul>
