--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -3,7 +3,7 @@
     <ul>
      <li><a href="{{ site.baseurl }}/popcorn-scripting">Popcorn Scripting</a></li>
      <li><a href="{{ site.baseurl }}/contextual-inquiry">Contextual Inquiry</a></li>
-     <li><a href="#">Team Synthesis (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis</a></li>
      <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
      <li><a href="{{ site.baseurl }}/user-testing">User Testing</a></li>
      <li><a href="#">5 Whys (Coming Soon)</a></li>
