--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -12,7 +12,7 @@
      <li><a href="#">Dump and Sort (Coming Soon)</a></li> 
      <li><a href="#">Group Sketching (Coming Soon)</a></li>
      <li><a href="#">Storyboard (Coming Soon)</a></li>
-     <li><a href="#">Persona Development (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
      <li><a href="#">Dot Voting (Coming Soon)</a></li>
      <li><a href="#">Wireframe Development (Coming Soon)</a></li>
      <li><a href="#">Prototype Development (Coming Soon)</a></li>     
