--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -18,7 +18,7 @@
      <li><a href="#">Prototype Development (Coming Soon)</a></li>     
      <li><a href="#">2x2 Sorting (Coming Soon)</a></li>
      <li><a href="#">Stack Ranking (Coming Soon)</a></li>
-     <li><a href="#">Atomic Design (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/atomic-design">Atomic Design</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
      <li><a href="#">Derisking (Coming Soon)</a></li>
      
