--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -14,7 +14,7 @@
      <li><a href="#">Storyboard (Coming Soon)</a></li>
      <li><a href="#">Persona Development (Coming Soon)</a></li>
      <li><a href="#">Dot Voting (Coming Soon)</a></li>
-     <li><a href="#">Wireframe Development (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/wireframe-development">Wireframe Development</a></li>
      <li><a href="#">Prototype Development (Coming Soon)</a></li>     
      <li><a href="#">2x2 Sorting (Coming Soon)</a></li>
      <li><a href="#">Stack Ranking (Coming Soon)</a></li>
