--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -16,7 +16,7 @@
      <li><a href="#">Dot Voting (Coming Soon)</a></li>
      <li><a href="#">Wireframe Development (Coming Soon)</a></li>
      <li><a href="#">Prototype Development (Coming Soon)</a></li>     
-     <li><a href="#">2x2 Sorting (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/2x2">2x2 Sorting</a></li>
      <li><a href="#">Stack Ranking (Coming Soon)</a></li>
      <li><a href="#">Atomic Design (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
