--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -20,7 +20,7 @@
      <li><a href="#">Stack Ranking (Coming Soon)</a></li>
      <li><a href="#">Atomic Design (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
-     <li><a href="#">Derisking (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
      
 <!-- Old ones ... verify if needed
      <li><a href="#">Art Gallery</a></li>
