--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -13,7 +13,7 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                         <ul><ul><ul>
-                            <li><a href="#">Interview Script Generation (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/interview-script-generation">Interview Script Generation (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/user-interviews">Performing User Interviews</a></li>
                             <li><a href="{{ site.baseurl }}/interview-synthesis">User Interview Synthesis</a></li>
                         </ul></ul></ul>
