--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -19,7 +19,7 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                         <ul><ul><ul>
-                            <li><a href="#">Technical Discovery &amp; Analysis (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/technical-discovery-analysis">Technical Discovery &amp; Analysis (Coming Soon)</a></li>
                             <li><a href="#">Defining &amp; Prioritizing Problems (Coming Soon)</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
