--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -6,18 +6,18 @@
      <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis</a></li>
      <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
      <li><a href="{{ site.baseurl }}/user-testing">User Testing</a></li>
-     <li><a href="#">5 Whys (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/5-whys">5 Whys (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/service-blueprint">Service Blueprints</a></li>          
      <li><a href="{{ site.baseurl }}/journey-map">Journey Map</a></li>
-     <li><a href="#">Dump and Sort (Coming Soon)</a></li> 
-     <li><a href="#">Group Sketching (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/dump-sort">Dump and Sort (Coming Soon)</a></li> 
+     <li><a href="{{ site.baseurl }}/group-sketching">Group Sketching (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
      <li><a href="{{ site.baseurl }}/storyboard">Storyboard</a></li>
-     <li><a href="#">Dot Voting (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/dot-voting">Dot Voting (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/wireframe-development">Wireframe Development</a></li>
-     <li><a href="#">Prototype Development (Coming Soon)</a></li>     
+     <li><a href="{{ site.baseurl }}/protype-development">Prototype Development (Coming Soon)</a></li>     
      <li><a href="{{ site.baseurl }}/2x2">2x2 Sorting</a></li>
-     <li><a href="#">Stack Ranking (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/stack-ranking">Stack Ranking (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/atomic-design">Atomic Design</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
      <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
