--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -9,7 +9,7 @@
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
                             <li><a href="{{ site.baseurl }}/business-goals">Defining Business Goals</a></li>
-                            <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigations</a></li>
+                            <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigations (Coming Soon)</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                         <ul><ul><ul>
@@ -44,9 +44,9 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/delivering-product">Delivering a Product</a></li>
                     <ul><ul><ul>
-                            <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
+                            <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
-                            <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
+                            <li><a href="{{ site.baseurl }}/testing-software">Testing Software (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/integrating-systems-services">Integrating with Systems &amp; Services (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
                             <li><a href="{{ site.baseurl }}/setting-up-product-board">Setting Up a Product Board (Coming Soon)</a></li>
