--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -6,7 +6,7 @@
      <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis</a></li>
      <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
      <li><a href="{{ site.baseurl }}/user-testing">User Testing</a></li>
-     <li><a href="{{ site.baseurl }}/5-whys">5 Whys (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/5-whys">5 Whys</a></li>
      <li><a href="{{ site.baseurl }}/service-blueprint">Service Blueprints</a></li>          
      <li><a href="{{ site.baseurl }}/journey-map">Journey Map</a></li>
      <li><a href="{{ site.baseurl }}/dump-sort">Dump and Sort (Coming Soon)</a></li> 
@@ -21,7 +21,7 @@
      <li><a href="{{ site.baseurl }}/atomic-design">Atomic Design</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
      <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
-     
+     <li><a href="{{ site.baseurl }}/deploying-software">Deploying Software</a></li>
 <!-- Old ones ... verify if needed
      <li><a href="#">Art Gallery</a></li>
      <li><a href="{{ site.baseurl }}/interview-script-generation">Interview Script Generation</a></li>
