--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -20,25 +20,26 @@
                     <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/technical-discovery-analysis">Technical Discovery &amp; Analysis (Coming Soon)</a></li>
-                            <li><a href="{{ site.baseurl }}/defining-prioritizing-problems">Defining &amp; Prioritizing Problems (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/defining-prioritizing-problems">Defining &amp; Prioritizing Problems</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/defining-the-problem">Solutioning - Defining the Problem</a></li>
                             <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
-                            <li><a href="{{ site.baseurl }}/prototype-interviews">Prototype Interviews (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/prototype-interviews">Prototype Interviews</a></li>
                             <li><a href="{{ site.baseurl }}/ui-design-development">UI Design Development (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/prioritization">Prioritization</a></li>
-                            <li><a href="{{ site.baseurl }}/feature-sizing">Feature Sizing (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/feature-sizing">Feature Sizing</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/generating-backlog">Generating a Backlog</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/writing-user-stories">Writing User Stories</a></li>
-                            <li><a href="{{ site.baseurl }}/writing-acceptance-criteria">Writing Acceptance Criteria (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/writing-acceptance-criteria">Writing Acceptance Criteria</a></li>
+                            <li><a href="{{ site.baseurl }}/splitting-stories">Splitting Stories</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-value">Measuring Business Value</a></li>
                             <li><a href="{{ site.baseurl }}/definition-of-done">Defining Definition of Done</a></li>
                         </ul></ul></ul>
