--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -9,7 +9,7 @@
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/strategic-objectives">Defining Strategic Objectives</a></li>
                             <li><a href="{{ site.baseurl }}/business-goals">Defining Business Goals</a></li>
-                            <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigations (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/risks-mitigation">Risks &amp; Mitigations</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/discovery">Discovery</a></li>
                         <ul><ul><ul>
