--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -13,7 +13,7 @@
      <li><a href="{{ site.baseurl }}/group-sketching">Group Sketching (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
      <li><a href="{{ site.baseurl }}/storyboard">Storyboard</a></li>
-     <li><a href="{{ site.baseurl }}/dot-voting">Dot Voting (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/dot-voting">Dot Voting</a></li>
      <li><a href="{{ site.baseurl }}/wireframe-development">Wireframe Development</a></li>
      <li><a href="{{ site.baseurl }}/prototype-development">Prototype Development (Coming Soon)</a></li>     
      <li><a href="{{ site.baseurl }}/2x2">2x2 Sorting</a></li>
