--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -9,6 +9,7 @@
      <li><a href="{{ site.baseurl }}/5-whys">5 Whys</a></li>
      <li><a href="{{ site.baseurl }}/service-blueprint">Service Blueprints</a></li>          
      <li><a href="{{ site.baseurl }}/journey-map">Journey Map</a></li>
+     <li><a href="{{ site.baseurl }}/assumptions-tracker">Assumptions Tracker</a></li>
      <li><a href="{{ site.baseurl }}/dump-sort">Dump and Sort (Coming Soon)</a></li> 
      <li><a href="{{ site.baseurl }}/group-sketching">Group Sketching (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
