--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -46,7 +46,7 @@
                     <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
-                            <li><a href="{{ site.baseurl }}/testing-software">Testing Software (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
                             <li><a href="{{ site.baseurl }}/integrating-systems-services">Integrating with Systems &amp; Services (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
                             <li><a href="{{ site.baseurl }}/setting-up-product-board">Setting Up a Product Board (Coming Soon)</a></li>
