--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -12,6 +12,7 @@
      <li><a href="{{ site.baseurl }}/dump-sort">Dump and Sort (Coming Soon)</a></li> 
      <li><a href="{{ site.baseurl }}/group-sketching">Group Sketching (Coming Soon)</a></li>
      <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
+     <li><a href="{{ site.baseurl }}/process-mapping">Process Mapping</a></li>
      <li><a href="{{ site.baseurl }}/storyboard">Storyboard</a></li>
      <li><a href="{{ site.baseurl }}/dot-voting">Dot Voting</a></li>
      <li><a href="{{ site.baseurl }}/wireframe-development">Wireframe Development</a></li>
