--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -44,7 +44,7 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/delivering-product">Delivering a Product</a></li>
                     <ul><ul><ul>
-                            <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                             <li><a href="{{ site.baseurl }}/testing-software">Testing Software (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/integrating-systems-services">Integrating with Systems &amp; Services (Coming Soon)</a></li>
