--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -49,7 +49,7 @@
                             <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
                             <li><a href="{{ site.baseurl }}/integrating-systems-services">Integrating with Systems &amp; Services (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
-                            <li><a href="{{ site.baseurl }}/setting-up-product-board">Setting Up a Product Board (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/setting-up-product-board">Setting Up a Product Board</a></li>
                             <li><a href="{{ site.baseurl }}/ui-component-libary-development">UI Component Library Development (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/accessibility-considerations">Accessibility Considerations</a></li>
                     </ul></ul></ul>
