--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -18,7 +18,7 @@
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/problem-workshop">Problem Workshop</a></li>
                         <ul><ul><ul>
-                            <li><a href="{{ site.baseurl }}/technical-discovery-analysis">Technical Discovery &amp; Analysis (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/technical-discovery-analysis">Technical Discovery &amp; Analysis</a></li>
                             <li><a href="{{ site.baseurl }}/defining-prioritizing-problems">Defining &amp; Prioritizing Problems</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/framing">Framing</a></li>
