--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -47,7 +47,7 @@
                             <li><a href="{{ site.baseurl }}/defining-releases">Defining Releases</a></li>
                             <li><a href="{{ site.baseurl }}/measuring-velocity">Measuring &amp; Using Velocity</a></li>
                             <li><a href="{{ site.baseurl }}/testing-software">Testing Software</a></li>
-                            <li><a href="{{ site.baseurl }}/integrating-systems-services">Integrating with Systems &amp; Services (Coming Soon)</a></li>
+                            <li><a href="{{ site.baseurl }}/integrating-systems-services">Integrating with Systems &amp; Services</a></li>
                             <li><a href="{{ site.baseurl }}/client-management">Client Management</a></li>
                             <li><a href="{{ site.baseurl }}/setting-up-product-board">Setting Up a Product Board</a></li>
                             <li><a href="{{ site.baseurl }}/ui-component-libary-development">UI Component Library Development (Coming Soon)</a></li>
