--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -20,7 +20,7 @@
      <li><a href="{{ site.baseurl }}/wireframe-development">Wireframe Development</a></li>
      <li><a href="{{ site.baseurl }}/prototype-development">Prototype Development (Coming Soon)</a></li>     
      <li><a href="{{ site.baseurl }}/2x2">2x2 Sorting</a></li>
-     <li><a href="{{ site.baseurl }}/stack-ranking">Stack Ranking (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/stack-ranking">Stack Ranking</a></li>
      <li><a href="{{ site.baseurl }}/atomic-design">Atomic Design</a></li>
      <li><a href="{{ site.baseurl }}/story-sizing">Sizing</a></li>
      <li><a href="{{ site.baseurl }}/derisking">Derisking</a></li>
