--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -11,7 +11,7 @@
      <li><a href="{{ site.baseurl }}/journey-map">Journey Map</a></li>
      <li><a href="{{ site.baseurl }}/assumptions-tracker">Assumptions Tracker</a></li>
      <li><a href="{{ site.baseurl }}/dump-sort">Dump and Sort (Coming Soon)</a></li> 
-     <li><a href="{{ site.baseurl }}/group-sketching">Group Sketching (Coming Soon)</a></li>
+     <li><a href="{{ site.baseurl }}/group-sketching">Group Sketching</a></li>
      <li><a href="{{ site.baseurl }}/brainstorming">Brainstorming</a></li>
      <li><a href="{{ site.baseurl }}/persona-development">Persona Development</a></li>
      <li><a href="{{ site.baseurl }}/process-mapping">Process Mapping</a></li>
