--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -53,7 +53,7 @@
                             <li><a href="{{ site.baseurl }}/ui-component-libary-development">UI Component Library Development (Coming Soon)</a></li>
                             <li><a href="{{ site.baseurl }}/accessibility-considerations">Accessibility Considerations</a></li>
                     </ul></ul></ul>
-                    <li><a href="{{ site.baseurl }}/meetings">All the Meetings You Need (Coming Soon)</a></li>
+                    <li><a href="{{ site.baseurl }}/meetings">All the Meetings You Need</a></li>
                         <ul><ul><ul>
                             <li><a href="{{ site.baseurl }}/daily-standup">Daily Standup</a></li>
                             <li><a href="{{ site.baseurl }}/iteration-planning">Iteration Planning</a></li>
