--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -26,7 +26,7 @@
                             <li><a href="{{ site.baseurl }}/defining-the-problem">Solutioning - Defining the Problem</a></li>
                             <li><a href="{{ site.baseurl }}/solutioning-sketching">Solutioning - Brainstorming &amp; Sketching</a></li>
                             <li><a href="{{ site.baseurl }}/prototype-interviews">Prototype Interviews</a></li>
-                            <li><a href="{{ site.baseurl }}/ui-design-development">UI Design Development</a></li>
+                            <li><a href="{{ site.baseurl }}/ui-design-development">Prototype Development for User Testing</a></li>
                             <li><a href="{{ site.baseurl }}/business-metrics">Defining Business Value Metrics</a></li>
                         </ul></ul></ul>
                     <li><a href="{{ site.baseurl }}/inception">Inception</a></li>
