Updated practice nav and fixed group interview missing tags

--- a/_includes/design-plays.html
+++ b/_includes/design-plays.html
@@ -3,6 +3,8 @@
     <ul>
      <li><a href="{{ site.baseurl }}/popcorn-scripting">Popcorn Scripting</a></li>
      <li><a href="{{ site.baseurl }}/contextual-inquiry">Contextual Inquiry</a></li>
+     <li><a href="{{ site.baseurl }}/Immersion">Immersion</a></li>
+     <li><a href="{{ site.baseurl }}/Group-Interview">Group Interview</a></li>
      <li><a href="{{ site.baseurl }}/team-synthesis">Team Synthesis</a></li>
      <li><a href="{{ site.baseurl }}/science-fair">Science Fair</a></li>
      <li><a href="{{ site.baseurl }}/user-testing">User Testing</a></li>
