--- a/_includes/product-plays.html
+++ b/_includes/product-plays.html
@@ -1,7 +1,7 @@
 <div class="sideLinks">
             <h2>Plays</h2>
                 <ul>
-                    <li><a href="{{ site.baseurl }}/overview">Overview (Coming Soon)</a></li>
+                    <!--<li><a href="{{ site.baseurl }}/overview">Overview (Coming Soon)</a></li>-->
                     <li><a href="{{ site.baseurl }}/definitions">Definitions</a></li>
                     <li><a href="{{ site.baseurl }}/product-manager-role">Role of the Product Manager</a></li>
                     <li><a href="{{ site.baseurl }}/product-owner-role">Role of the Product Owner</a></li>
