--- a/_includes/v2/footer.html
+++ b/_includes/v2/footer.html
@@ -1,36 +1,8 @@
-<!-- footer -->
-<footer class="usa-footer usa-footer-slim" role="contentinfo">
-    <div class="usa-grid usa-footer-return-to-top">
-        <a href="javascript:void(0);">Return to top</a>
+<footer class="custom-primary-darker p-5">
+  <div class="container">
+    <div class="float-right">
+      <a href="#scroll-top">Back to top</a>
     </div>
-    <div class="usa-footer-primary-section">
-        <div class="usa-grid">
-            <nav class="usa-footer-nav usa-width-two-thirds">
-                <ul class="usa-unstyled-list">
-                    <li class="usa-width-one-fourth usa-footer-primary-content">
-                        <a class="usa-footer-primary-link" href="{{ site.baseurl }}/v2/players">Players</a>
-                    </li>
-                    <li class="usa-width-one-fourth usa-footer-primary-content">
-                        <a class="usa-footer-primary-link" href="{{ site.baseurl }}/v2/playlist">Playlist</a>
-                    </li>
-                    <li class="usa-width-one-fourth usa-footer-primary-content">
-                        <a class="usa-footer-primary-link" href="{{ site.baseurl }}/v2/practices">Practices</a>
-                    </li>
-                    <li class="usa-width-one-fourth usa-footer-primary-content">
-                        <a class="usa-footer-primary-link" href="{{ site.baseurl }}/v2/about">About Us</a>
-                    </li>
-                </ul>
-            </nav>
-            <address>
-                <div class="usa-width-one-third">
-                    <img class="usa-footer-medium" src="https://www.uscis.gov/sites/default/files/ocomm/en/images/hp/footerLogo2x.png" alt="">
-                </div>
-            </address>
-        </div>
-    </div>
-    <div class="usa-footer-secondary_section">
-        <div class="usa-grid">
-        </div>
-    </div>
+    <div>The DID(it) Playbook is a project of U.S. Citizen and Immigration Services, maintained by the Digital Innovation & Development Program.</div>
+  </div>
 </footer>
-<!-- //footer -->
