Adding initial practices

--- a/_includes/v2/sidenav-practices.html
+++ b/_includes/v2/sidenav-practices.html
@@ -14,12 +14,12 @@
               </li>
               <ul class="custom-sidenav-sub_list">
                   <li>
-                      <a href="{{ site.baseurl }}/v2/2x2_sorting">
+                      <a href="{{ site.baseurl }}/v2/practices/2x2_sorting">
                           2x2 Sorting
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/5_whys">
+                      <a href="{{ site.baseurl }}/v2/practices/5_whys">
                           5 Whys
                       </a>
                   </li>
@@ -34,7 +34,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/brainstorming">
+                      <a href="{{ site.baseurl }}/v2/practices/brainstorming">
                           Brainstorming
                       </a>
                   </li>
@@ -149,7 +149,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/science_fair">
+                      <a href="{{ site.baseurl }}/v2/practices/science_fair">
                           Science Fair
                       </a>
                   </li>
@@ -184,7 +184,7 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/synthesis">
+                      <a href="{{ site.baseurl }}/v2/practices/synthesis">
                           Synthesis
                       </a>
                   </li>
@@ -194,12 +194,12 @@
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/usability_testing">
+                      <a href="{{ site.baseurl }}/v2/practices/usability_testing">
                           Usability Testing
                       </a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl }}/v2/user_interview">
+                      <a href="{{ site.baseurl }}/v2/practices/user_interview">
                           User Interview
                       </a>
                   </li>
